@@ -1,12 +1,9 @@
 package de.ids_mannheim.korap.annotation;
 
 import java.io.BufferedReader;
-import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.Set;
@@ -53,7 +50,7 @@ public class AnnotationParser {
         if (resources.length < 1) return;
 
         for (Resource r : resources) {
-            log.debug(r.getFilename());
+//            log.debug(r.getFilename());
             readFile(r.getInputStream());
         }
     }
