@@ -3,7 +3,10 @@
    - Integrated lite and full services and controllers in core (margaretha)
 21/11/2018
    - Updated OAuth2 refresh token request to create a new refresh token and 
-     revoke the old one per request (margaretha)   
+     revoke the old one per request (margaretha)
+28/11/2018
+   - Updated NamedVCLoader to delete existing VC in DB (margaretha)
+   - Handled storing cached VC with VC reference (margaretha)
    
 # version 0.61.3
 17/10/2018
